src/tess/tl/test/fail/test_fail_ufcs_wrong_arg_type.tl
#module main
#import <Array.tl>

main() {
    arr := Array.empty[Int]()
    arr.push("hello")   // type error: Str vs Int
    0
}
